# DamascusEngine

./: .gitignore  README.md  pyproject.toml
configs/: baseline.json  cartpole_real_run.json  memory_real_run.json  search.json
src/damascusengine/: __init__.py  agents.py  research_loop.py  runner.py
src/damascusengine/benchmarks/: __init__.py  inventory_flow.py  sequence_memory.py
src/damascusengine/experiments/: __init__.py  cartpole_ppo.py  memory_ppo.py
src/damascusengine/reporting/: __init__.py  cartpole_report.py  memory_report.py
