[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "damascusengine"
version = "0.1.0"
description = "Local research workbench for self-improving agents."
requires-python = ">=3.11"
dependencies = [
  "numpy<2.0",
  "matplotlib",
  "pandas",
  "torch",
  "pufferlib"
]

[project.scripts]
damascusengine-benchmark = "damascusengine.runner:main"
damascusengine-research = "damascusengine.research_loop:main"
damascusengine-cartpole = "damascusengine.experiments.cartpole_ppo:main"
damascusengine-report = "damascusengine.reporting.cartpole_report:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
